# example_fsdl

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: mnist_autoencoder.ipynb  mnist_classification_inference.ipynb  mnist_classification_train.ipynb  utils.py
